JAVA/jna-func-master/target/classes/win32-x86-64/InfEntity.h



struct DeviceInfo
{
	int id;      //Device Id
	char cName[MAX_PATH]; //the Device name
};


struct ComName
{
	char cComPort[MAX_PATH]; //the Device name
};
struct DeviceLst
{
	int iComCount; //Number of serial ports
	int iNumber;      //Device Count
	DeviceInfo DevInfo[MAX_DEVICE_NUM];
	ComName ComNameInfo[MAX_DEVICE_NUM];
};


typedef struct
{
	int emissivity;
	int airTemp;
	int reflectTemp;
	int humidity;
	int distance;
} envir_param; //Parameters are actual values * 10000